--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>내가 좋아하는 축구스타 - 메시</title>
-  <mata charset="utf-8">
+  <meta charset="utf-8">
 </head>
 <body>
   <h1> <a href="index.html">MY favoritist soccer player</a></h1>
@@ -17,7 +17,6 @@
 <br>그리고 프리킥을 잘차고 최근에 바르셀로나에서의 600골을 달성 하였습니다.</p>
 <p>제가 메시를 좋아하는 이유는 키가 작아서 밸런스가 잘 유지 되고 빠르고 간결한 드리블 때문입니다.<br>
 <br><a href="https://www.youtube.com/watch?v=DeUSdWHfOas" target="_blank" title="메시스패셜">메시 스페셜 영상을 봐보세요</a></p>
-
 
 
 
