--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!doctype html>  
 <html>
 <head>
   <title>내가 좋아하는 축구스타 - 메시,음바페,손흥민</title>
-  <mata charset="utf-8">
+  <meta charset="utf-8">
 </head>
 <body>
   <h1> <a href="index.html">MY favoritist soccer player</a></h1>
@@ -12,9 +12,6 @@
   <li><a href="3.html">음바페</a></li>
 </ol>
 <h2>이곳은 수 많은 축구 선수중 제가 제일 좋아하는 축구 선수 메시,음바페,손흥민 선수에 대해서 소개하는 페이지 입니다</h2>
-
-
-
 
 </body>
 </html>
