--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
 </ol>
 
 <h2>손흥민</h2>
-<img src="손흥민.jpg" width="390"><img src="messi.jpg" width="390"><br>
+<img src="손흥민.jpg" width="390"><br>
 <p>손흥민은 epl(잉글랜드 프리미엄 리그)의 여러 팀 중에서 토트넘 선수입니다.
 <br>손흥민은 양발을 모두 잘쓰는 능력을 가지고 있고 빠른 스피드를자랑합니다.
 <br>손흥민은 박지성 다음으로 챔피언스리그에서 뛴 2번째 한국인 선수가 되었습니다.
