--- a/3.html
+++ b/3.html
@@ -12,7 +12,7 @@
   <li><a href="3.html">음바페</a></li>
 </ol>
 <h2>음바페</h2>
-<img src="음바페.png" width="390"><img src="messi.jpg" width="390"><p>
+<img src="음바페.png" width="390"><p>
 <br><strong>음바페는 1998년 아주 어린 나이인데도 불구하고 월드컵에서
 <br>아주 멋진 활약을 하며 자신의 나라인 <u>프랑스를 우승 시켰습니다.</u></strong>
 <br>음바페는 아주 빠른 스피드와 골문 앞에서 침착함을 가지고 있습니다.
