--- a/2.html
+++ b/2.html
@@ -14,12 +14,33 @@
 </ol>
 
 <h2>손흥민</h2>
-<img src="손흥민.jpg" width="390"><br>
-<p>손흥민은 epl(잉글랜드 프리미엄 리그)의 여러 팀 중에서 토트넘 선수입니다.
-<br>손흥민은 양발을 모두 잘쓰는 능력을 가지고 있고 빠른 스피드를자랑합니다.
-<br>손흥민은 박지성 다음으로 챔피언스리그에서 뛴 2번째 한국인 선수가 되었습니다.
+<p>손흥민은 epl(잉글랜드 프리미엄 리그)의 여러 팀 중에서 토트넘 선수입니다.<br>
+  <img src="손흥민.jpg" width="390"><br>
+손흥민은 양발을 모두 잘쓰는 능력을 가지고 있고 빠른 스피드를자랑합니다.
+손흥민은 박지성 다음으로 챔피언스리그에서 뛴 2번째 한국인 선수가 되었습니다.
 <br><a href="https://www.youtube.com/watch?v=fkP6y3Sqklc" target="_blank" title="손흥민 감아차기 스패셜">
   저는 손흥민의 감아차는 슛을 좋아합니다.</a></p>
+  <P><div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://my-favoritist-6.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>                            
 
 </body>
 </html>
