--- a/3.html
+++ b/3.html
@@ -12,13 +12,34 @@
   <li><a href="3.html">음바페</a></li>
 </ol>
 <h2>음바페</h2>
-<img src="음바페.png" width="390"><p>
+  <img src="음바페.png" width="390">
 <br><strong>음바페는 1998년 아주 어린 나이인데도 불구하고 월드컵에서
 <br>아주 멋진 활약을 하며 자신의 나라인 <u>프랑스를 우승 시켰습니다.</u></strong>
 <br>음바페는 아주 빠른 스피드와 골문 앞에서 침착함을 가지고 있습니다.
 <br><a href="https://www.youtube.com/watch?v=rHy6oeTWpCA" target="_blank" title="음바페의 스피드">
   저는 음바페가 치고 달리는 드리블을 좋아합니다.</a></p>
+<P>
+  <div id="disqus_thread"></div>
+<script>
 
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://my-favoritist-6.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>                        
 
 
 
