--- a/1.html
+++ b/1.html
@@ -17,6 +17,28 @@
 <br>그리고 프리킥을 잘차고 최근에 바르셀로나에서의 600골을 달성 하였습니다.</p>
 <p>제가 메시를 좋아하는 이유는 키가 작아서 밸런스가 잘 유지 되고 빠르고 간결한 드리블 때문입니다.<br>
 <br><a href="https://www.youtube.com/watch?v=DeUSdWHfOas" target="_blank" title="메시스패셜">메시 스페셜 영상을 봐보세요</a></p>
+<P>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://my-favoritist-6.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
 
 
 
