--- a/4.html
+++ b/4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>내가 좋아하는 축구스타 - 음바페</title>
+  <title>내가 좋아하는 축구스타 - 메시</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -10,15 +10,11 @@
   <li><a href="1.html">리오넬 메시</a></li>
   <li><a href="2.html">손흥민</a></li>
   <li><a href="3.html">음바페</a></li>
-    <li><a href="4.html">당신의 축구선수는?</a><li>
+  <li><a href="4.html">당신의 축구선수는?</a><li>
 </ol>
-<h2>음바페</h2>
-  <img src="음바페.png" width="390">
-<br><strong>음바페는 1998년 아주 어린 나이인데도 불구하고 월드컵에서
-<br>아주 멋진 활약을 하며 자신의 나라인 <u>프랑스를 우승 시켰습니다.</u></strong>
-<br>음바페는 아주 빠른 스피드와 골문 앞에서 침착함을 가지고 있습니다.
-<br><a href="https://www.youtube.com/watch?v=rHy6oeTWpCA" target="_blank" title="음바페의 스피드">
-  저는 음바페가 치고 달리는 드리블을 좋아합니다.</a></p>
+<h2>당신이 좋아하는 축구선수는 누구 인가요?</h2>
+<p>댓글로 달아주세요</p>
+
 <P>
   <div id="disqus_thread"></div>
 <script>
