--- a/2.html
+++ b/2.html
@@ -11,6 +11,7 @@
   <li><a href="1.html">리오넬 메시</a></li>
   <li><a href="2.html">손흥민</a></li>
   <li><a href="3.html">음바페</a></li>
+    <li><a href="4.html">당신의 축구선수는?</a><li>
 </ol>
 
 <h2>손흥민</h2>
@@ -40,7 +41,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-</P>                            
+</P>
 
 </body>
 </html>
